[package]
name = "audiograph"
version = "0.1.2"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
license = "MIT"
description = "An audio graph optimised for performance and limiting runtime allocations"
repository = "https://github.com/bennetthardwick/audio-graph"
readme = "README.md"
categories = [ "algorithms", "data-structures", "multimedia" ]
keywords = [ "audio", "dsp", "graph" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample = "0.10.0"
bufferpool = "0.1.6"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
dsp-chain = "0"
lazy_static = "1"
jack = "0.6"
crossbeam = "0.7"

[badges]
travis-ci = { repository = "https://github.com/bennetthardwick/audio-graph" }
